# armory

./: BUILD_SYSTEM_SUMMARY.md  CLAUDE.md  Dockerfile.cross  INITIAL_bitcoin_wallet_rust.md  MODERNIZATION_ANALYSIS.md  README.md  REQUIREMENTS.md
.github/workflows/: ci.yml  release.yml
PRPs/: bitcoin_wallet_rust_modernization.md
armory-rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
armory-rust/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  DEVELOPMENT_LOG.md  LEGACY_MIGRATION.md  README.md  SETUP.md
armory-rust/src/: error.rs  lib.rs  main.rs
armory-rust/src/cli/: commands.rs  config.rs  handlers.rs  mod.rs  tests.rs
armory-rust/src/compatibility/: mod.rs  rpc_compatibility.rs  tests.rs
armory-rust/src/crypto/: encryption.rs  kdf.rs  mod.rs  random.rs  signatures.rs
armory-rust/src/migration/: legacy_import.rs  mod.rs  tests.rs
armory-rust/src/network/: mod.rs  p2p.rs  rpc.rs  tests.rs
armory-rust/src/script/: descriptors.rs  engine.rs  engine_old.rs  mod.rs  taproot.rs  taproot_old.rs  witness.rs  witness_simple.rs
armory-rust/src/storage/: legacy_import.rs  mod.rs  wallet_storage.rs
armory-rust/src/transaction/: builder.rs  mod.rs  psbt.rs  tests.rs
armory-rust/src/wallet/: descriptor_wallet.rs  hd_wallet.rs  mod.rs
docs/: API.md  ARCHITECTURE.md  CLAUDE_DEVELOPMENT_LOG.md  DEVELOPMENT.md  DEVELOPMENT_LOGGING.md  MIGRATION.md  RELEASE_PROCESS.md  SECURITY.md
scripts/: build-binaries.sh  build-with-docker.sh  dev-log-helper.sh  docker-build.sh
